<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.main.MainActivity">

    <com.ekades.ruangmuslim.lib.ui.component.toolbar.ToolbarCV
        android:id="@+id/toolbarCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainCoordinatorLayout"
        android:layout_width="@dimen/spacing_x0"
        android:layout_height="@dimen/spacing_x0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCV">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/spacing_x0">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/collapsingToolbarBgView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/spacing_x16"
                    android:paddingBottom="@dimen/spacing_x20">

                    <TextView
                        android:id="@+id/titleCollapsingToolbarTextView"
                        style="@style/Heading4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/taglineToolbarTextView"
                        style="@style/Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_x12"
                        android:text="@string/tagline"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleCollapsingToolbarTextView" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clPrayerTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_x16"
                        app:layout_constraintTop_toBottomOf="@id/taglineToolbarTextView">

                        <androidx.constraintlayout.widget.Group
                            android:id="@+id/groupLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:constraint_referenced_ids="icLocation, tvLocation, tvChangeCity,dividerCV, tvDetailPrayerTime" />

                        <com.ekades.ruangmuslim.lib.ui.component.icon.BasicIconCV
                            android:id="@+id/icLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_x16"
                            app:layout_constraintBottom_toTopOf="@id/dividerCV"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvLocation"
                            style="@style/Title5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_x16"
                            android:textColor="@color/tundora"
                            app:layout_constraintBottom_toBottomOf="@id/icLocation"
                            app:layout_constraintEnd_toStartOf="@id/tvChangeCity"
                            app:layout_constraintStart_toEndOf="@id/icLocation"
                            app:layout_constraintTop_toTopOf="@id/icLocation" />

                        <TextView
                            android:id="@+id/tvChangeCity"
                            style="@style/Label1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_x16"
                            android:text="@string/action_change_location"
                            android:textColor="@color/brand"
                            app:layout_constraintBottom_toBottomOf="@id/tvLocation"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/tvLocation" />

                        <com.ekades.ruangmuslim.lib.ui.component.misc.DividerCV
                            android:id="@+id/dividerCV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_x12"
                            app:layout_constraintTop_toBottomOf="@id/icLocation" />

                        <com.ekades.ruangmuslim.lib.ui.component.icon.BasicIconCV
                            android:id="@+id/icClock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_x16"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/dividerCV" />

                        <TextView
                            android:id="@+id/tvPrayerTime"
                            style="@style/Title5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_x16"
                            android:text="@string/msg_input_prayer_schedule"
                            android:textColor="@color/tundora"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/icClock"
                            app:layout_constraintTop_toBottomOf="@id/dividerCV" />

                        <TextView
                            android:id="@+id/tvDetailPrayerTime"
                            style="@style/Label1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_x16"
                            android:text="@string/action_see_all"
                            android:textColor="@color/brand"
                            app:layout_constraintBottom_toBottomOf="@id/tvPrayerTime"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/tvPrayerTime" />

                        <com.ekades.ruangmuslim.lib.ui.component.loading.RectangleSkeletonCV
                            android:id="@+id/loaderPrayerTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_x16"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/icClock"
                            app:layout_constraintTop_toBottomOf="@id/dividerCV" />

                        <com.ekades.ruangmuslim.lib.ui.component.loading.RectangleSkeletonCV
                            android:id="@+id/loaderDetailPrayerTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_x16"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@id/tvPrayerTime"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/tvPrayerTime" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/brand"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainContentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_x16">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPrayerTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>